--- a/app/src/main/res/layout/activity_locations.xml
+++ b/app/src/main/res/layout/activity_locations.xml
@@ -55,7 +55,7 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/myPositionButton"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/mediumButtonHeight"
         android:layout_marginTop="10dp"
         android:background="@drawable/lightblue_medium_corner_button"
         android:text="@string/positionMy"
@@ -68,7 +68,7 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/saveButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/mediumButtonHeight"
         android:background="@drawable/orange_medium_corner_button"
         android:text="@string/save"
         android:textColor="@color/white"
