--- a/app/src/main/res/layout/activity_remove_locations.xml
+++ b/app/src/main/res/layout/activity_remove_locations.xml
@@ -59,7 +59,7 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/deleteLocationsButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/mediumButtonHeight"
         android:background="@drawable/orange_medium_corner_button"
         android:text="@string/delete"
         android:textColor="@color/white"
