--- a/app/src/main/res/layout/activity_sign.xml
+++ b/app/src/main/res/layout/activity_sign.xml
@@ -50,7 +50,7 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/signButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/mediumButtonHeight"
         android:background="@drawable/green_medium_corner_button"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
