--- a/app/src/main/res/layout/local_item_row.xml
+++ b/app/src/main/res/layout/local_item_row.xml
@@ -9,6 +9,7 @@
         android:id="@+id/localItemNameButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
         android:gravity="center"
         android:textSize="25sp"/>
@@ -17,6 +18,7 @@
         android:id="@+id/localItemNameExpandedButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_up_24"
         android:gravity="center"
         android:textSize="25sp"
