--- a/app/src/main/res/layout/local_item_row.xml
+++ b/app/src/main/res/layout/local_item_row.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
+        android:textColor="@color/black"
         android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_down_24"
         android:gravity="center"
         android:textSize="25sp"/>
@@ -19,6 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
+        android:textColor="@color/black"
         android:drawableEnd="@drawable/ic_baseline_keyboard_arrow_up_24"
         android:gravity="center"
         android:textSize="25sp"
